# Caesar

./: .gitattributes  .gitignore  CMakeLists.txt  Doxyfile.in  INSTALLATION_COMPLETE.md  LICENSE  README.md  caesar_demo.csr  create_release.ps1  debug_both_else.cpp  debug_class.cpp  debug_indentation.cpp  debug_list.cpp  debug_multiline_list.cpp  debug_nesting.cpp  debug_simple.cpp  debug_two_level.cpp  install.bat  install.ps1  test_fibonacci.csr  test_if.csr  test_math.csr
.github/: languages.json  languages.yml
assets/: caesar_logo_projectfile_v2
debug/: .gitignore  README.md  build.bat
debug/src/: debug_both_else.cpp  debug_class.cpp  debug_indentation.cpp  debug_list.cpp  debug_multiline_list.cpp  debug_nesting.cpp  debug_simple.cpp  debug_two_level.cpp
docs/: ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FAQ.md  ROADMAP.md  SECURITY.md  SYNTAX.md  TROUBLESHOOTING.md
examples/: README.md  control_flow.csr  fibonacci.csr  hello_world.csr
examples/advanced/: complete_demo.csr
include/caesar/: ast.h  caesar.h  interpreter.h  lexer.h  parser.h  token.h
src/: CMakeLists.txt  main.cpp  repl.cpp
src/interpreter/: interpreter.cpp
src/lexer/: lexer.cpp  token.cpp
src/parser/: ast.cpp  parser.cpp
test_standalone/caesar-v1.1.0-windows/: README.md  USER_GUIDE.md  install.bat  install.ps1
test_standalone/caesar-v1.1.0-windows/examples/: functions.csr
tests/: CMakeLists.txt  test_build_system.cpp  test_coverage_analysis.cpp  test_error_handling.cpp  test_integration.cpp  test_lexer.cpp  test_lexer_advanced.cpp  test_parser.cpp  test_parser_advanced.cpp  test_stress.cpp
tests/comparison/: BENCHMARK_RESULTS_TEMPLATE.md  README.md  run_benchmarks.ps1  test_setup.ps1
tests/comparison/caesar/: factorial.csr  fibonacci.csr  loop_intensive.csr  prime_check.csr  string_ops.csr
tests/comparison/cpp/: factorial.cpp  fibonacci.cpp  loop_intensive.cpp  prime_check.cpp  string_ops.cpp
tests/comparison/python/: factorial.py  fibonacci.py  loop_intensive.py  prime_check.py  string_ops.py
tests/manual/: README.md  test_builtins.csr  test_defaults.csr  test_for.csr  test_for_control.csr  test_function.csr  test_scoping.csr  test_while.csr
